--- a/src/main/webapp/index.zul
+++ b/src/main/webapp/index.zul
@@ -3,7 +3,7 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://www.zkoss.org/2005/zul"
         xsi:schemaLocation="http://www.zkoss.org/2005/zul http://www.zkoss.org/2005/zul/zul.xsd"
-        viewModel="@id('vm') @init('com.simon.zk.controllers.IndexController')">
+        viewModel="@id('vm') @init('com.simon.controllers.IndexController')">
 
     <label value="@load(vm.message)" />
 
